Chrome OS: Implement MD Error screen.

This CL updates Error screen to Material design.

Bug: 755674
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I0ac85a917031dd72df49988d4d91acdd50842184
Reviewed-on: https://chromium-review.googlesource.com/627498
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Alexander Alekseev <alemate@chromium.org>
Cr-Commit-Position: refs/heads/master@{#496797}
Former-commit-id: d5ab3d2d311fd67851ec89f24bd718709cb34a21