chromeos/chromeos_switches.cc
@@ -290,6 +290,9 @@ const char kTetherStub[] = "tether-stub";
 // Disables material design OOBE UI.
 const char kDisableMdOobe[] = "disable-md-oobe";
 
+// Disables material design Error screen.
+const char kDisableMdErrorScreen[] = "disable-md-error-screen";
+
 // Enables notifications about captive portals in session.
 const char kEnableNetworkPortalNotification[] =
     "enable-network-portal-notification";
